--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "installDeps": "yarn && cd client && yarn"
   },
-  "author": "Craig Dupuis",
-  "license": "",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0"
